# Image-warehouse

./: .gitignore  README.md  build_exe.ps1  pyproject.toml  requirements.txt  run_app.ps1  装饰画图片管理软件产品文档.md
src/pdd_art_manager/: __init__.py  app.py  config.py  models.py
src/pdd_art_manager/services/: __init__.py  batch_generation_service.py  batch_upload_service.py  code_generator.py  image_processor.py  index_store.py  library_thumbnail_service.py  print_job_service.py  shop_store.py
src/pdd_art_manager/ui/: main_window.py
tests/: test_batch_generation_service.py  test_batch_upload_service.py  test_code_generator.py  test_config.py  test_image_processor.py  test_index_store.py  test_library_thumbnail_service.py  test_print_job_service.py  test_upload_workflow.py
